# geonames-lib

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: err.rs  lib.rs  model.rs
src/model/: admin_code.rs  alternate_name.rs  geo_name.rs  mod.rs
test-data/: admin1CodesASCII.txt
